--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Store/Index.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Store/Index.cshtml
@@ -5,6 +5,15 @@
 
 <h2>Store</h2>
 
+<script>
+    function CalculatePrice() {
+        $.each($("input"), function (idx,val) { 
+
+        });
+
+    }
+</script>
+
 @using (Html.BeginForm())
 {
     
@@ -74,11 +83,9 @@
         </div>
         <div class="col-md-6">
             <h3>Shopkeeper</h3>
-            <h4>SelectedItems :</h4>
-            <ol id="selectedItemsList"></ol>
             <h4>Price :</h4>
             <p class="text-warning" id="price"></p>
-            <input />
+            <input type="submit" value="Buy">
         </div>
     </div>
 }
