--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Store/Index.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Store/Index.cshtml
@@ -8,25 +8,85 @@
 <h2>Store</h2>
 
 <script>
+    $(document).ready(function () {
+        $('#buyButton').on('click', function (evt) {
+
+            var webMethod = "/Store/Index";
+
+            var parameters = "{\"ItemsId\":\"[";
+            
+            $.each($('.theClass:checkbox:checked'), function (idx, val) {
+                //var input = $(this);
+                if (val.title != null && val.title != "null") {
+                    var id = val.id;
+                    if (id.startsWith("item")) {
+                        parameters = parameters.concat(id.replace("item", "") + ",");
+                    }
+                }
+            });
+            if (parameters.endsWith(",")) {
+
+                parameters = parameters.substr(0, parameters.length - 1);
+            }
+            
+            parameters = parameters.concat("]\",\"TitlesId\":\"[");
+            $.each($('.theClass:checkbox:checked'), function (idx, val) {
+                //var input = $(this);
+                if (val.title != null && val.title != "null") {
+                    var id = val.id;
+                    if (id.startsWith("title")) {
+                        parameters = parameters.concat(id.replace("title", "") + ",");
+                    }
+                }
+            });
+            if (parameters.endsWith(",")) {
+
+                parameters = parameters.substr(0, parameters.length - 1);
+            }
+            parameters = parameters.concat("]\"}");
+            webMethod = webMethod + "?itemsBoughtViewModel=\"" + parameters+"\"";
+            $.ajax({
+                type: "POST",
+                url: webMethod,
+                data: parameters,
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (msg) {
+                    //alert("success");
+                    window.location.href = "/Store";
+                },
+                error: function (e) {
+                    window.location.href = "/Store";
+                }
+            });
+
+        });
+    });
+
     function CalculatePrice() {
         var price = 0.0;
         var nbr = 0;
         $.each($('.theClass:checkbox:checked'), function (idx, val) {
-            //var input = $(this); 
+            //var input = $(this);
             if (val.title != null && val.title != "null") {
-                
+
                     price += Number(val.title);
                     nbr++;
-                
+                    
             }
         });
-        $('#price').html(nbr + " items for "+ price + " MICoins");
+        $('#price').html(nbr + " items for " + price + " MICoins");
+        var remaining = (@Model.Profile.MICoins - price);
+        $('#remaining').html(remaining + " MICoins");
+        if (remaining < 0) {
+            $('#buyButton').prop('disabled', true);
+        }
+        else {
+            $('#buyButton').prop('disabled', false);
 
+        }
     }
 </script>
-
-@using (Html.BeginForm())
-{
     
     <div class="row">
         <div class="col-md-6">
@@ -96,9 +156,12 @@
         </div>
         <div class="col-md-6">
             <h3>Shopkeeper</h3>
+            <h4>Balance :</h4>
+            <p>@Model.Profile.MICoins</p>
             <h4>Price :</h4>
             <p class="text-warning" id="price"></p>
-            <input type="submit" value="Buy">
+            <h4>Balance remaining after buy : </h4>
+            <p id="remaining"></p>
+            <input type="button" value="Buy"  id="buyButton" >
         </div>
     </div>
-}
