--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Shared/_AvatarPartial.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Shared/_AvatarPartial.cshtml
@@ -28,7 +28,7 @@
         <img src=@(path) alt="Logo" class="profilavatar" />
         foreach (EItemType it in Enum.GetValues(typeof(EItemType)))
         {
-            if (it != EItemType.Avatar)
+            if (it != EItemType.Avatar && Model.SelectedItems.ContainsKey(it))
             {
                 <img src=@Model.SelectedItems[it].Item.ImageLink alt="Logo" class="profilavatar" />
             }
