--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Shared/_LoginPartial.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
     <li><a asp-area="" asp-controller="Project" asp-action="Index">Projects</a></li>
     <li><a asp-area="" asp-controller="Profile" asp-action="Index">Profile</a></li>
     <li><a asp-area="" asp-controller="Store" asp-action="Index">Store</a></li>
-
+    <li><a asp-area="" asp-controller="Leaderboard" asp-action="Index">Leaderboard</a></li>
 </ul>
 
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
